# app-ly-resume-tailor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  cli.py  config.py  diff_view.py  input_normalization.py  logging_config.py  pipeline.py  pyproject.toml  resume_sections.py
.github/workflows/: ci.yml
agents/: errors.py  review.py  tailoring.py
exporters/: converter.py  docx.py  markdown.py  text.py
models/: schemas.py
plans/: implementation-plan-app-ly-20260322.md  plan-templates-and-schema-v2-20260323.md
prds/: prd-app-ly-20260322.md
templates/: library.py
tests/: test_agents.py  test_cli.py  test_config.py  test_diff_view.py  test_docx_exporter.py  test_input_normalization.py  test_input_validation.py  test_logging.py  test_md_text_export.py  test_pipeline.py  test_resume_sections.py  test_schemas.py  test_tool_output_parsing.py
