[project]
name = "app-ly-resume-tailor"
version = "0.1.0"
description = "A locally-hosted AI resume tailoring tool powered by Claude."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40",
    "anthropic>=0.40",
    "python-docx>=1.1",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
